# universal-vision-mcp

./: .env.example  .gitignore  CHRONOS.md  LICENSE  README-en.md  README.md  pyproject.toml  show_preview.py
docs/testing/: recording-osd-test.md  test-results-2026-03-08.md  usb-camera-test.md
src/universal_vision_mcp/: __init__.py  benchmark_recognition.py  camera.py  cli.py  config.py  http_server.py  scanner.py  server.py  test_camera_osd.py  test_camera_recording.py  test_camera_testcap.py  test_camera_trackbars.py  test_config_quality.py
