[project]
name = "universal-vision-mcp"
version = "0.1.0"
description = "Universal Vision MCP - Standardized eye and neck for AI agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.1",
    "onvif-zeep-async>=4.0.0",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "scapy>=2.7.0",
    "typer>=0.15.1",
    "zeroconf>=0.148.0",
]

[project.scripts]
universal-vision-mcp = "universal_vision_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/universal_vision_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]
